--- a/event.html
+++ b/event.html
@@ -6,5 +6,22 @@
   </head>
   <body>
 
+    <div class="grid-container event-body">
+
+      <h1>User ID</h1>
+      <h3>Event Title</h3>
+      <p class="btn left-btn back-btn"></p>
+      <button type="button" name="add-service">New service</button>
+      <div class="grid-container services-list"></div>
+
+      <div class="grid-container add-new-service">
+        <form action="/action_page.php" method="POST">
+            <input type="file" name="pic" accept="image/*">
+            <input type="submit">
+        </form>
+      </div>
+
+    </div>
+
   </body>
 </html>
